tests/specs/ecosystem/cliffy/command/1_0_0_rc_4.test
cliffy/command/1.0.0-rc.4
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@cliffy/flags@1.0.0-rc.4": "jsr:@cliffy/flags@1.0.0-rc.4",
      "jsr:@std/assert@^0.221.0": "jsr:@std/assert@0.221.0",
      "jsr:@std/text@0.221": "jsr:@std/text@0.221.0"
    },
    "jsr": {
      "@cliffy/flags@1.0.0-rc.4": {
        "integrity": "29f370ade4ddf6e150a4d25fc44661234c19870ffcf7fb07cd100f1843fcd6e1",
        "dependencies": [
          "jsr:@std/text@0.221"
        ]
      },
      "@std/assert@0.221.0": {
        "integrity": "a5f1aa6e7909dbea271754fd4ab3f4e687aeff4873b4cef9a320af813adb489a"
      },
      "@std/text@0.221.0": {
        "integrity": "a2f89ceb0d8851cd33e6774064621a1da9fbc36578cf4f02c5b5bcd7e8c84b67",
        "dependencies": [
          "jsr:@std/assert@^0.221.0"
        ]
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'StringType'.
  /** Complete action names. */ public complete(): string[] {
                                       ~~~~~~~~
    at file://<tmpdir>/types/action_list.ts:8:40

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Type<boolean>'.
  /** Complete boolean type. */ public complete(): string[] {
                                       ~~~~~~~~
    at file://<tmpdir>/types/boolean.ts:7:40

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'StringType'.
  /** Complete child command names. */ public complete(cmd: Command): string[] {
                                              ~~~~~~~~
    at file://<tmpdir>/types/child_command.ts:8:47

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'StringType'.
  /** Complete sub-command names of global parent command. */ public complete(_cmd: Command, parent?: Command): string[] {
                                                                     ~~~~~~~~
    at file://<tmpdir>/types/command.ts:4:70

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Provider'.
  listVersions(name: string, currentVersion?: string): Promise<void> {
  ~~~~~~~~~~~~
    at file://<tmpdir>/upgrade/provider/github.ts:31:3

Found 5 errors.

error: Type checking failed.

